# cstation

./: .gitignore  404.html  LICENSE  README.md  cstation.py  hello.py  index.html  main.py  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml
ansible_playbook/app/: portainer.yaml  server_ssh.yaml
ansible_playbook/container/: list.yml
ansible_playbook/docker/: deploy_odoo.yml  deploy_portainer.yml  deploy_postgresql.yml  deploy_traefik.yml  docker_setup.yml  perfectwork6_llm_dns.yaml
ansible_playbook/github/: _repo_sync.yml  _repo_sync_dir.yaml  repo_oca_sync_16.0.yaml  repo_oca_sync_17.0.yaml  repo_odoo_sync.yaml  repo_odoo_sync.yml  repo_sync.yaml
ansible_playbook/postgresql/: configure.yml
ansible_playbook/server/: odoo_addons.yml  odoo_dev.yml  odoo_setup.yml  odoo_setup_local.yml  server_setup.yaml  server_ssh.yaml  server_ssh.yml  setup.yml
api/: index.html
config_file/de01/: DE01DB.yml  DE01_SEQ6_DB01DB.yaml
config_file/odoo_oca/: 18.0.yml
config_file/sg01/: SG01DB.yaml  SG01_DEV_SG01DB.yaml  SG01_OTR6_SG01DB.yaml
config_file/sg06/: SG06_DB.yml  (+3 more)
contributing/: index.html
docker/: main.py
docs/: CNAME  api.md  contributing.md  features.md  index.md  installation.md  usage.md
etc/: ansible.cfg  github_repo.yaml  hosts.yaml  repo_odoo_sync.yml
features/: index.html
github/: main.py
installation/: index.html
inventory/: ansis.yaml  syc.yaml
search/: search_index.json
server/: main.py
src/: cstation.py
templates/: postgresql.auto.conf_16GB  postgresql.auto.conf_4GB  postgresql.auto.conf_8GB  pw.conf.j2  traefik_websocket_config.j2
usage/: index.html
utils/: __init__.py  ansible_utils.py  server.py
(+86 files in other folders)
