[project]
name = "cstation"
version = "0.1.21"
description = "Managing PerfectWork Platform Infrastracture"
readme = "README.md"
authors = [{name = "Loh W S (Wilson)"}]
requires-python = ">=3.9"
dependencies = [
    "ansible>=8.7.0",
    "ansible-runner>=2.4.0",
    "auto-click-auto>=0.1.5",
    "click>=8.1.7",
    "pyyaml>=6.0.2",
    "typer>=0.15.1",
    "ansible-lint>=6.22.1",  # Add this line
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[project.urls]
# Homepage = "https://github.com/simonw/demo-app"
# Changelog = "https://github.com/simonw/demo-app/releases"
# Issues = "https://github.com/simonw/demo-app/issues"
# CI = "https://github.com/simonw/demo-app/actions"

[project.scripts]
cstation = "cstation:app"
