[project]
name = "cstation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "pyyaml>=6.0.2",
    "typer>=0.15.1",
    "docker>=7.0.0", # Add this line
    "setuptools>=80.9.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=8.3.4"]

[project.urls]
# Homepage = "https://github.com/simonw/demo-app"
# Changelog = "https://github.com/simonw/demo-app/releases"
# Issues = "https://github.com/simonw/demo-app/issues"
# CI = "https://github.com/simonw/demo-app/actions"

[project.scripts]
cstation = "cstation:app"
